fixed quote text wrapping issue; moving to production

--- a/public/stylesheets/months/january.css
+++ b/public/stylesheets/months/january.css
@@ -323,7 +323,6 @@ a.view_leaderboards_button {
 div.qotw {
   background: #FFFFFF;
   float: none;
-  white-space: nowrap;
   text-align: center;
   padding: 0 0.7em;
   /*display: inline-table;*/
@@ -334,7 +333,7 @@ span.qotw-content {
   color: #0099CC;
   font-style: italic;
   font-weight: bold;
-  font-size: 24pt;
+  font-size: 18pt;
 }
 
 span.qotw-content a {
@@ -344,5 +343,5 @@ span.qotw-content a {
 span.qotw-source {
   color: #6B7272;
   font-style: italic;
-  font-size: 16pt;
+  font-size: 14pt;
 }
